--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
   "dependencies": {
     "@medusajs/admin": "latest",
     "@medusajs/icons": "^1.2.1",
+    "@yaireo/dragsort": "^1.3.1",
+    "@yaireo/tagify": "^4.24.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.17.2",
+    "quill": "^1.3.7",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
