--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.17.2",
-    "quill": "^1.3.7",
+    "react-simplemde-editor": "^5.2.0",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
