--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dev": "cross-env npm run build:server && medusa develop"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.29.1",
     "@medusajs/admin": "latest",
     "@medusajs/icons": "^1.2.1",
     "@yaireo/dragsort": "^1.3.1",
@@ -34,7 +35,6 @@
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.17.2",
-    "react-simplemde-editor": "^5.2.0",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
