--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dotenv": "16.3.1",
     "express": "^4.17.2",
+    "react-dropzone": "^14.2.3",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
