--- a/package.json
+++ b/package.json
@@ -26,7 +26,18 @@
     "dev": "cross-env npm run build:server && medusa develop"
   },
   "dependencies": {
+    "@editorjs/code": "^2.9.0",
+    "@editorjs/delimiter": "^1.4.0",
     "@editorjs/editorjs": "^2.29.1",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/inline-code": "^1.5.0",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/nested-list": "^1.4.2",
+    "@editorjs/paragraph": "^2.11.4",
+    "@editorjs/quote": "^2.6.0",
+    "@editorjs/table": "^2.3.0",
+    "@editorjs/underline": "^1.1.0",
+    "@editorjs/warning": "^1.4.0",
     "@medusajs/admin": "latest",
     "@medusajs/icons": "^1.2.1",
     "@yaireo/dragsort": "^1.3.1",
@@ -36,6 +47,7 @@
     "dotenv": "16.3.1",
     "express": "^4.17.2",
     "react-dropzone": "^14.2.3",
+    "simple-image-editorjs": "^1.4.0",
     "typeorm": "^0.3.16"
   },
   "devDependencies": {
