--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typescript",
     "ecommerce",
     "headless",
-    "medusa"
+    "medusa",
+    "blog"
   ],
   "scripts": {
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
@@ -40,6 +41,7 @@
     "@editorjs/warning": "^1.4.0",
     "@medusajs/admin": "latest",
     "@medusajs/icons": "^1.2.1",
+    "@medusajs/medusa": "^1.20.4",
     "@yaireo/dragsort": "^1.3.1",
     "@yaireo/tagify": "^4.24.0",
     "body-parser": "^1.19.0",
