--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "typescript": "^4.5.2"
   },
   "peerDependencies": {
-    "@medusajs/medusa": "1.20.4",
+    "@medusajs/medusa": "^1.20.4",
     "react": "18.2.0",
     "react-router-dom": "6.22.3"
   },
