--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@editorjs/warning": "^1.4.0",
     "@medusajs/admin": "latest",
     "@medusajs/icons": "^1.2.1",
+    "@medusajs/ui": "^2.4.3",
     "@yaireo/dragsort": "^1.3.1",
     "@yaireo/tagify": "^4.24.0",
     "body-parser": "^1.19.0",
