chore: small tasks around

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "medusa-plugin-blog",
+  "name": "medusa-plugin-blogger",
   "version": "0.0.1",
-  "description": "A medusa plugin to implement a blog in your application",
+  "description": "A blog implementation for MedusaJS",
   "author": "Marco Moscatelli (https://marcomoscatelli.com/)",
   "license": "MIT",
   "keywords": [
